--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,8 @@
   }
 }
 #footer #scores #trails #highscore {
+  display: flex;
+  flex-direction: row;
   font-size: 18pt;
 }
 @media (max-width: 499px) {
