--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,13 @@
   opacity: 0;
   transition: all 0.2s ease;
 }
+#midSec #output #guessSymbol {
+  position: absolute;
+  padding-top: 30pt;
+  font-size: 90pt;
+  color: #000000;
+  opacity: 1;
+}
 #midSec #output #errorita {
   position: absolute;
   padding-top: 12pt;
@@ -106,7 +113,7 @@
 #midSec #output #gameOver {
   position: absolute;
   padding-top: 12pt;
-  font-size: 42pt;
+  font-size: 38pt;
   color: #980000;
   opacity: 0;
 }
@@ -346,6 +353,8 @@
 @font-face {
   font-family: arcade;
   src: url(/fonts/arcade.ttf) format("truetype");
+  rel: "stylesheet";
+  type: "text/css";
 }
 html {
   scroll-behavior: smooth;
