--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,8 @@
 @font-face {
   font-family: arcade;
   src: url(/fonts/arcade.ttf) format('truetype');
+  rel: 'stylesheet';
+  type: 'text/css';
 }
 
 html {
